     * Improved sprite for Dwarvish Caravan.
   * Son of the Black-Eye:
     * Added some animations for the Orcish Shamans.
   * Under the Burning Suns:
     * Updated sprites for Naga Hunter, Naga Guardian line, Crab Man.
     * Crab Man changed to Monster Crab.
 * Graphics:
   * Improved or new terrain graphics: Stones with Sand Drifts, Igloo Village,
     Adobe Village.
 * Language and i18n:
   * New translation: Asturian
   * Updated translations: British English, Galician, Russian, Swedish
 * Sound effects:
   * Fixed various subtle timing problems with attack sounds.
 * Terrains:
   * New terrain: Desert Mountains (Mdy), Impassable Desert Mountains (Mdy^Xm),
     Ruined Adobe Village (^Vdr).
 * User Interface:
   * GUI1 comboboxes now use the thinner menu frame style.
   * Implemented a new GUI2 Attack dialog
   * Added gui2 comboboxes.
   * Removed prompt when purging the WML cache from Preferences.
   * Implemented a new GUI2 Preferences dialog
 * WML engine:
   * Added new event "unit placed", which triggers when (and regardless of how)
     a unit appears on the map.
   * Added support for color= in [unstore_unit] and [print]
   * removed network and network_ai controlles, whether a side is networked is
     now stored in the is_local attribute.
   * Eventnames (received in wesnoth.game_events.on_event) now have all their
     spaces replaced with underscores.
   * lua can now read/write the 'persistent' attribute of sides.
   * lua can now read/write the 'alignment' attribute of units.
   * Added {CURRENT_FILE} and {CURRENT_DIRECTORY} macros.
   * add support for relative dirs in wesnoth.dofile/require
   * Added name= and write_name= attributes in [item]
   * Added description_alignment= key to [campaign]
 * Miscellaneous and bug fixes:
   * Fix the new log code on Windows to actually use Unicode-aware functions
     in a couple of places so Wesnoth does not quit on startup when trying to