@@ -343,6 +343,7 @@
             [image]
                 name={IMAGESTEM}-A[01~15].png{IPF}:{TIME}
                 layer=-1000
+                is_water=yes
             [/image]
         [/tile]
     [/terrain_graphics]
@@ -367,6 +368,7 @@
             [image]
                 name={IMAGESTEM}-A[01~15]-@R0.png{IPF}:{TIME}
                 layer={LAYER}
+                is_water=yes
             [/image]
             # wmlscope: stop ignoring
         [/tile]
