@@ -776,6 +776,7 @@
             layer={LAYER}
             center=90,144
             base=90,144
+            is_water=yes
         [/image]
     [/terrain_graphics]
     [terrain_graphics]
@@ -807,6 +808,7 @@
             layer={LAYER}
             center=90,144
             base=90,144
+            is_water=yes
         [/image]
     [/terrain_graphics]
 
@@ -839,6 +841,7 @@
             layer={LAYER}
             center=90,144
             base=90,144
+            is_water=yes
         [/image]
     [/terrain_graphics]
     [terrain_graphics]
@@ -870,6 +873,7 @@
             layer={LAYER}
             center=90,144
             base=90,144
+            is_water=yes
         [/image]
     [/terrain_graphics]
 #enddef
@@ -1229,6 +1233,7 @@
         layer={LAYER}
         name={IMAGESTEM}[01~{FRAMES}].png~CROP(0,0,72,72){MASKIPF}{IPF}:100
         random_start=no
+        is_water=yes
 
         [variant]
             has_flag=342x180_water02
