@@ -138,6 +138,20 @@
 			horizontal_alignment = "left"
 
 			[toggle_button]
+				id = "animate_water"
+				label = _ "Animate water"
+				tooltip = "Display animated water graphics (can be slow)"
+			[/toggle_button]
+		[/column]
+	[/row]
+
+	[row]
+		[column]
+			border = "all"
+			border_size = 5
+			horizontal_alignment = "left"
+
+			[toggle_button]
 				id = "animate_units_standing"
 				label = _ "Show unit standing animations"
 				tooltip = "Continuously animate standing units in the battlefield"
