@@ -839,6 +839,9 @@ protected:
 	/** Local cache for preferences::animate_map, since it is constantly queried. */
 	bool animate_map_;
 
+	/** Local version of preferences::animate_water, used to detect when it's changed. */
+	bool animate_water_;
+
 private:
 
 #ifdef SDL_GPU
