@@ -30,6 +30,7 @@ Version 1.13.2+dev:
  * Graphics:
    * Improved or new terrain graphics: Stones with Sand Drifts, Igloo Village,
      Adobe Village.
+   * Added option for toggling off water animations to Preferences -> Display.
  * Language and i18n:
    * New translation: Asturian
    * Updated translations: British English, Galician, Russian, Swedish
